# beets-alias

./: .cruft.json  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: labeler.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt
src/beetsplug/: alias.py
tests/: __init__.py  test_alias.py  test_plugin.py
tests/beetsplug/: __init__.py  testplugin.py
